RESOLVED FIXED211655
Fix build errors and warnings for non-unified JSCOnly
https://bugs.webkit.org/show_bug.cgi?id=211655
Summary Fix build errors and warnings for non-unified JSCOnly
Ross Kirsling
Reported 2020-05-08 18:08:41 PDT
Fix build errors and warnings for non-unified JSCOnly
Attachments
Patch (6.67 KB, patch)
2020-05-08 18:13 PDT, Ross Kirsling
no flags
Patch (7.70 KB, patch)
2020-05-08 19:56 PDT, Ross Kirsling
no flags
Patch for landing (7.66 KB, patch)
2020-05-09 14:55 PDT, Ross Kirsling
no flags
Ross Kirsling
Comment 1 2020-05-08 18:13:47 PDT
Yusuke Suzuki
Comment 2 2020-05-08 19:36:54 PDT
Comment on attachment 398908 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=398908&action=review Nice, but I think some of warning should be disabled. > Source/JavaScriptCore/ChangeLog:16 > + Move function definition to avoid needing to include VM.h from header. I think we should keep it inline since it is one of the important function, and vmEntryToJavaScript is always non-inlined LLInt code. So this wrapper should be inline. > Source/JavaScriptCore/tools/JSDollarVM.cpp:-327 > - static constexpr bool needsDestruction = false; It should be defined here to make SimpleObject non-destruction explicit for readability. JS Cell object hierarchy should be carefully managed in particular if they are using `cellSpace`. > Source/JavaScriptCore/tools/JSDollarVM.cpp:-564 > - static constexpr bool needsDestruction = false; > - It should be defined here to make RuntimeArray non-destruction explicit for readability.
Ross Kirsling
Comment 3 2020-05-08 19:56:19 PDT
Ross Kirsling
Comment 4 2020-05-08 19:57:22 PDT
Those were precisely the cases that I wanted review feedback on, thanks. :)
Darin Adler
Comment 5 2020-05-09 08:41:08 PDT
Comment on attachment 398911 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=398911&action=review > Source/JavaScriptCore/tools/JSDollarVM.cpp:328 > +IGNORE_WARNINGS_BEGIN("unused-const-variable") The need for this is unfortunate. Would be nice to find a way to avoid it.
Ross Kirsling
Comment 6 2020-05-09 13:13:57 PDT
(In reply to Darin Adler from comment #5) > Comment on attachment 398911 [details] > Patch > > View in context: > https://bugs.webkit.org/attachment.cgi?id=398911&action=review > > > Source/JavaScriptCore/tools/JSDollarVM.cpp:328 > > +IGNORE_WARNINGS_BEGIN("unused-const-variable") > > The need for this is unfortunate. Would be nice to find a way to avoid it. I do agree; it seems like a comment would be more than sufficient, since there are about 17 JSCell-inheriting class declarations in this file and the only two actually overriding needsDestruction are doing so implicitly by deriving from JSDestructibleObject. Not sure why two of the others should need to be explicit about choosing not to override.
Ross Kirsling
Comment 7 2020-05-09 14:55:43 PDT
Created attachment 398942 [details] Patch for landing
EWS
Comment 8 2020-05-09 15:40:17 PDT
Committed r261441: <https://trac.webkit.org/changeset/261441> All reviewed patches have been landed. Closing bug and clearing flags on attachment 398942 [details].
Radar WebKit Bug Importer
Comment 9 2020-05-09 15:41:16 PDT
Note You need to log in before you can comment on or make changes to this bug.