Fix build errors and warnings for non-unified JSCOnly https://bugs.webkit.org/show_bug.cgi?id=211655

Reviewed by Darin Adler and Yusuke Suzuki.

* bytecode/BytecodeDumper.cpp:
(JSC::isConstantRegisterIndex): Deleted.
Remove unused function.

* llint/LLIntEntrypoint.cpp:
* llint/LLIntThunks.cpp:
* llint/LLIntThunks.h:
* runtime/AggregateErrorConstructor.cpp:
* runtime/AggregateErrorPrototype.cpp:
* wasm/js/WebAssemblyFunction.cpp:
Fix includes.

* tools/JSDollarVM.cpp:
Deal with "unused constant" warnings for needsDestruction.

* wasm/WasmLLIntPlan.cpp:
* wasm/WasmSignature.cpp:
Remove unused constants.


Canonical link: https://commits.webkit.org/224587@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@261441 268f45cc-cd09-0410-ab3c-d52691b4dbfc