Source/JavaScriptCore/llint/LLIntEntrypoint.cpp
@@ -35,7 +35,6 @@
 #include "LowLevelInterpreter.h"
 #include "MaxFrameExtentForSlowPathCall.h"
 #include "StackAlignment.h"
-#include "VM.h"
 
 namespace JSC { namespace LLInt {
 
